@@ -1,7 +1,5 @@
 import org.gradle.internal.os.OperatingSystem
 
-import javax.tools.ToolProvider
-
 buildscript {
     repositories {
         mavenCentral()
@@ -10,7 +8,7 @@ buildscript {
 
 plugins {
     id "java"
-    id 'maven'
+    id 'maven-publish'
     id 'signing'
     id 'jacoco'
     id 'application'
@@ -41,20 +39,14 @@ def looksLikeWereInAGitRepository(){
 
 // Ensure that we have a clone of the git repository, and resolve any required git-lfs
 // resource files that are needed to run the build but are still lfs stub files.
-def ensureBuildPrerequisites(rbuildPrerequisitesMessage) {
-    if (!JavaVersion.current().isJava8Compatible()) {
+def ensureBuildPrerequisites(buildPrerequisitesMessage) {
+    if (!JavaVersion.current().equals(JavaVersion.VERSION_17)) {
+        println("Warning: using Java ${JavaVersion.current()} but only Java 17 has been tested.")
+    }
+    if (!JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
         throw new GradleException(
-                "Java 8 or later is required to build Picard, but ${JavaVersion.current()} was found. "
+                "A Java 17 compatible (Java 17 or later) version is required to build GATK, but ${JavaVersion.current()} was found. "
                         + "$buildPrerequisitesMessage")
-    }
-    // Make sure we can get a ToolProvider class loader (for Java 8). If not we may have just a JRE.
-    if (JavaVersion.current().isJava8() && ToolProvider.getSystemToolClassLoader() == null) {
-        throw new GradleException(
-                "The ClassLoader obtained from the Java ToolProvider is null. "
-                        + "If using Java 8 you must have a full JDK installed and not just a JRE. $buildPrerequisitesMessage")
-    }
-    if (!JavaVersion.current().isJava8() && !JavaVersion.current().isJava11()) {
-        println("Warning: using Java ${JavaVersion.current()} but only Java 8 and Java 11 have been tested.")
     }
     if (!looksLikeWereInAGitRepository()) {
         throw new GradleException("This doesn't appear to be a git folder. " +
@@ -65,17 +57,12 @@ def ensureBuildPrerequisites(rbuildPrerequisitesMessage) {
 
 ensureBuildPrerequisites(buildPrerequisitesMessage)
 
-final htsjdkVersion = System.getProperty('htsjdk.version', '2.21.2')
-final googleNio = 'com.google.cloud:google-cloud-nio:0.107.0-alpha:shaded'
-
-// Get the jdk files we need to run javaDoc. We need to use these during compile, testCompile,
-// test execution, and gatkDoc generation, but we don't want them as part of the runtime
-// classpath and we don't want to redistribute them in the uber jar.
-final javadocJDKFiles = ToolProvider.getSystemToolClassLoader() == null ? files([]) : files(((URLClassLoader) ToolProvider.getSystemToolClassLoader()).getURLs())
+final htsjdkVersion = System.getProperty('htsjdk.version', '3.0.1')
+final googleNio = 'com.google.cloud:google-cloud-nio:0.123.25'
 
 configurations {
     cloudConfiguration {
-        extendsFrom runtime
+        extendsFrom implementation
         dependencies {
             cloudConfiguration(googleNio)
         }
@@ -83,25 +70,24 @@ configurations {
 }
 
 dependencies {
-    compile('com.intel.gkl:gkl:0.8.5') {
+    implementation('com.intel.gkl:gkl:0.8.8') {
         exclude module: 'htsjdk'
     }
-    compile 'com.google.guava:guava:15.0'
-    compile 'org.apache.commons:commons-math3:3.5'
-    compile 'org.apache.commons:commons-collections4:4.3'
-    compile 'commons-lang:commons-lang:2.6'
-    compile 'com.github.samtools:htsjdk:' + htsjdkVersion
-    compile 'org.broadinstitute:barclay:2.0.0'
-    compileOnly(googleNio) {
-        transitive = false
-    }
+    implementation 'com.google.guava:guava:15.0'
+    implementation 'org.apache.commons:commons-math3:3.5'
+    implementation 'org.apache.commons:commons-collections4:4.3'
+    implementation 'com.github.samtools:htsjdk:' + htsjdkVersion
+    implementation 'org.broadinstitute:barclay:5.0.0'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
+    implementation 'org.openjdk.nashorn:nashorn-core:15.4'
 
-    // javadoc utilities; compile/test only to prevent redistribution of sdk jars
-    compileOnly(javadocJDKFiles)
-    testCompile(javadocJDKFiles)
+    //NOTE: this dependency spec causes doc gen to fail on FingerPrintChecker since doc gen is not
+    // a compile time task
+    compileOnly(googleNio)
 
-    testCompile 'org.testng:testng:6.14.3'
-    testCompile 'org.apache.commons:commons-lang3:3.6'
+    testImplementation 'org.testng:testng:6.14.3'
+    implementation 'org.apache.commons:commons-lang3:3.6'
 }
 
 configurations.all {
@@ -111,8 +97,8 @@ configurations.all {
     }
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 1.17
+targetCompatibility = 1.17
 
 final isRelease = Boolean.getBoolean("release")
 final gitVersion = gitVersion().replaceAll(".dirty", "")
@@ -123,7 +109,7 @@ group = 'com.github.broadinstitute'
 
 defaultTasks 'all'
 
-task all(dependsOn: ['jar', 'distZip', 'javadoc', 'shadowJar', 'barclayShadowJar', 'currentJar'])
+task all(dependsOn: ['jar', 'distZip', 'javadoc', 'shadowJar', 'currentJar', 'picardDoc'])
 
 // Source file names for the picard command line properties file. We select and include only one of
 // these two files in each jar, renamed to "picardCmdLine.properties", depending on which parser we
@@ -136,32 +122,14 @@ final String barclaySourcePropertyFile = 'barclayParserProperties.properties'
 final String picardTargetPropertiesPath = 'picard'
 final String picardTargetPropertyFile = 'picardCmdLine.properties'
 
-sourceSets {
-    // no need to include these in the jar files; the correct one is selected by the build to control Barclay
-    main {
-        resources {
-            exclude ('properties.templates/**')
-        }
-    }
-}
-
 tasks.withType(Jar){
     manifest {
         attributes 'Main-Class': 'picard.cmdline.PicardCommandLine',
                 'Implementation-Title': 'Picard',
                 'Implementation-Vendor': 'Broad Institute',
-                'Implementation-Version': version
-    }
-}
-
-jar {
-    from('src/main/resources/properties.templates') {
-        // for the default jar, we want the properties file that enables the picard parser
-        include legacySourcePropertyFile
-        into picardTargetPropertiesPath
-        rename { String fileName ->
-            fileName.replace(legacySourcePropertyFile, picardTargetPropertyFile)
-        }
+                'htsjdk-Version': htsjdkVersion,
+                'Implementation-Version': version,
+                'Multi-Release': 'true'
     }
 }
 
@@ -176,7 +144,7 @@ javadoc {
 
 // Generate Picard Online Doc
 task picardDoc(type: Javadoc, dependsOn: ['cleanPicardDoc', classes]) {
-    final File picardDocDir = new File("build/docs/picarddoc")
+    final File picardDocDir = file("build/docs/picarddoc")
     doFirst {
         // make sure the output folder exists or we can create it
         if (!picardDocDir.exists() && !picardDocDir.mkdirs()) {
@@ -192,9 +160,10 @@ task picardDoc(type: Javadoc, dependsOn: ['cleanPicardDoc', classes]) {
     }
     source = sourceSets.main.allJava
 
-    // The gatkDoc process instantiates any documented feature classes, so to run it we need the entire
-    // runtime classpath, as well as jdk javadoc files such as tools.jar, where com.sun.javadoc lives.
-    classpath = sourceSets.main.runtimeClasspath + javadocJDKFiles
+    // The picardDoc process instantiates any documented feature classes, so to run it we need the entire
+    // runtime classpath. The compileClasspath is required in order for the picardDoc doclet process to
+    // resolve the googleNio classes, which are compile-time only.
+    classpath = sourceSets.main.compileClasspath + sourceSets.main.runtimeClasspath
     options.docletpath = classpath.asType(List)
     options.doclet = "picard.util.help.PicardHelpDoclet"
 
@@ -210,22 +179,13 @@ task picardDoc(type: Javadoc, dependsOn: ['cleanPicardDoc', classes]) {
 
 task currentJar(type: Copy){
     from shadowJar
-    into new File(buildDir, "libs")
+    into file("$buildDir/libs")
     rename { string -> "picard.jar"}
 }
 
 shadowJar {
     finalizedBy currentJar
-    from('src/main/resources/properties.templates') {
-        // for the default jar, we want the properties file that enables the picard parser
-        include legacySourcePropertyFile
-        into picardTargetPropertiesPath
-        rename { String fileName ->
-            fileName.replace(legacySourcePropertyFile, picardTargetPropertyFile)
-        }
-    }
 }
-
 
 
 task cloudJar(type: com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar)  {
@@ -234,34 +194,16 @@ task cloudJar(type: com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) 
     archiveName 'picardcloud.jar'
 }
 
-
-// Create picardBarclay.jar, which is a identical to picard.jar, but contains a .properties
-// file that tells Picard to use the Barclay command line parser instead of the Picard
-// command line parser.
-//
-task barclayShadowJar(type: com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar)  {
-    configurations = [project.configurations.runtime]
-    from project.sourceSets.main.output
-    from('src/main/resources/properties.templates') {
-        // for the default jar, we want the properties file that enables the picard parser
-        include barclaySourcePropertyFile
-        into picardTargetPropertiesPath
-        rename { String fileName ->
-            fileName.replace(barclaySourcePropertyFile, picardTargetPropertyFile)
-        }
-    }
-    archiveName 'picardBarclay.jar'
-}
-
 // Run the tests using the legacy parser only. Assumes that test code is written using
 // legacy command line parser syntax.
-task legacyTest(type: Test)
+task legacyTest(type: Test) {
+    systemProperty 'picard.useLegacyParser', 'true'
+}
 
 // Run the tests using the Barclay command line parser (useLegacyParser=false), which requires
 // conversion of test command lines from Picard-style command line syntax to Barclay-style syntax.
 task barclayTest(type: Test) {
     systemProperty 'picard.convertCommandLine', 'true'
-    systemProperty 'picard.useLegacyParser', 'false'
 }
 
 // Run tests using both the legacy and barclay command line parsers.
@@ -272,6 +214,11 @@ test {
 tasks.withType(Test) {
     outputs.upToDateWhen { false } // tests will always rerun
     description = "Runs the unit tests"
+
+    jvmArgs += [
+            // required for MergeBamAlignmentTest
+            '--add-opens', 'java.base/java.io=ALL-UNNAMED'
+    ]
 
     useTestNG {
         if (OperatingSystem.current().isUnix()) {
@@ -331,8 +278,8 @@ jacocoTestReport {
     }
 }
 
- wrapper {
-    gradleVersion = '5.6'
+wrapper {
+    gradleVersion = '7.5.1'
 }
 
 task javadocJar(type: Jar) {
@@ -357,8 +304,8 @@ artifacts {
  * Sign non-snapshot releases with our secret key.  This should never need to be invoked directly.
  */
 signing {
-    required { isRelease && gradle.taskGraph.hasTask("uploadArchives") }
-    sign configurations.archives
+    required { isRelease && gradle.taskGraph.hasTask("publish") }
+    sign publishing.publications
 }
 
 /**
@@ -367,54 +314,62 @@ signing {
  *
  * For releasing to your local maven repo, use gradle install
  */
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+publishing {
+    publications {
+        picard(MavenPublication) {
+            from components.java
 
-            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: project.findProperty("sonatypeUsername"), password: project.findProperty("sonatypePassword"))
-            }
-
-            snapshotRepository(url: "https://broadinstitute.jfrog.io/broadinstitute/libs-snapshot-local/") {
-                authentication(userName: System.env.ARTIFACTORY_USERNAME, password: System.env.ARTIFACTORY_PASSWORD)
-            }
-
-            pom.project {
-                name 'Picard'
-                packaging 'jar'
-                description 'A set of command line tools (in Java) for manipulating high-throughput sequencing (HTS) data and formats such as SAM/BAM/CRAM and VCF.'
-                url 'http://broadinstitute.github.io/picard/'
-
-                developers {
-                    developer {
-                        id 'picard'
-                        name 'Picard Team'
-                        url 'http://broadinstitute.github.io/picard'
-                    }
-                }
+            artifact sourcesJar
+            artifact javadocJar
+            pom {
+                name = 'Picard'
+                packaging = 'jar'
+                description = 'A set of command line tools (in Java) for manipulating high-throughput sequencing (HTS) data and formats such as SAM/BAM/CRAM and VCF.'
+                url = 'http://broadinstitute.github.io/picard/'
 
                 scm {
-                    url 'git@github.com:broadinstitute/picard.git'
-                    connection 'scm:git:git@github.com:broadinstitute/picard.git'
+                    url = 'git@github.com:broadinstitute/picard.git'
+                    connection = 'scm:git:git@github.com:broadinstitute/picard.git'
                 }
 
                 licenses {
                     license {
-                        name 'MIT License'
-                        url 'http://opensource.org/licenses/MIT'
-                        distribution 'repo'
+                        name = 'MIT License'
+                        url = 'http://opensource.org/licenses/MIT'
+                        distribution = 'repo'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id = 'picard'
+                        name = 'Picard Team'
+                        url = 'http://broadinstitute.github.io/picard'
                     }
                 }
             }
         }
     }
+    repositories {
+        maven {
+            credentials {
+                username = isRelease ? project.findProperty("sonatypeUsername") : System.env.ARTIFACTORY_USERNAME
+                password = isRelease ? project.findProperty("sonatypePassword") : System.env.ARTIFACTORY_PASSWORD
+            }
+            def release = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+            def snapshot = "https://broadinstitute.jfrog.io/broadinstitute/libs-snapshot-local/"
+            url = isRelease ? release : snapshot
+        }
+    }
+}
+
+publish {
     doFirst {
         System.out.println("Uploading version $version")
     }
 }
 
-ext.htmlDir = new File("build/docs/html")
+ext.htmlDir = file("build/docs/html")
 
 //update static web docs
 task copyJavadoc(dependsOn: 'javadoc', type: Copy) {
